--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -9,9 +9,6 @@
   background-color:  #111;
 }
 
-#top-section,#middle-section,#bottom-section{
-  height: 30%;
-}
 
 #top-section,#bottom-section{
   color: #aaa;
@@ -19,28 +16,30 @@
 }
 
 #top-section{
-  margin-top: 6rem;
+  margin-top: 3rem;
   display: flex;
   flex-direction: row;
 }
 .top-section-contents{
   width: 15rem;
-  margin: 5rem 17rem;
+  font-weight: bolder;
 }
 
 
 #middle-section{
   display: flex;
   flex-direction: row;
-  margin: 5rem 0 5rem 10rem;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0;
 }
 
 .middle-section-content-words{
-  width: 60rem;
   color: #ca9558;
   font-size: 6rem;
   font-weight: bolder;
   line-height: 5rem;
+  border-bottom: 1px solid #ff5277;
 }
 
 
@@ -49,88 +48,38 @@
   flex-direction: row;
 }
 .bottom-section-contents{
-  width: 15rem;
-  margin: 5rem 17rem;
+  margin: 0 0.5rem;
+  font-weight: bolder;
 }
 
 
 @media only screen and (max-width: 389px){
   .top-section-contents{
-      font-size: 1rem;
-      width: 100%;
-      margin: 5rem 0 10rem 2rem;
-    }
-
-
-    .middle-section-content-words{
-      font-size: 2rem;
-      margin-left: 34rem;
-      margin-bottom: 10rem;
-    }
-    .bottom-section-contents{
-      font-size: 1rem;
-      margin: 0;
-    }
-    #bottom-section{
-      display: flex;
-      flex-direction: row;
-      margin: 0 0 10rem 5rem;
-      width: 100%;
-    }  
+    font-size: 1rem;
+    width: 5rem;
+  }
+  .middle-section-content-words{
+    font-size: 2rem;
+    line-height: normal;
+  }
 }
 
 @media only screen and (min-width:390px) and (max-width: 800px){
   .top-section-contents{
     font-size: 1rem;
-    width: 100%;
-    margin: 6rem 0 10rem 2rem;
+    width: 5rem;
   }
   .middle-section-content-words{
     font-size: 2rem;
-    margin-left: 34rem;
-    margin-bottom: 10rem;
+    line-height: normal;
   }
-  .bottom-section-contents{
-    font-size: 1.1rem;
-    margin: 0;
-  }
-  #bottom-section{
-    display: flex;
-    flex-direction: row;
-    margin: 0 0 15rem 5rem;
-    width: 100%;
-  }  
 }
 
 
 
 
-@media only screen and (min-width:801px) and (max-width: 1600px){
-  .top-section-contents{
-    font-size: 2rem;
-    width: 100%;
-    margin: 5rem 0 15rem 4rem;
-  }
+@media only screen and (min-width:801px) and (max-width: 899px){
   .middle-section-content-words{
-    font-size: 4rem;
-    margin-left: 20rem;
-    margin-bottom: 10rem;
+    font-size: 5rem;
   }
-  .bottom-section-contents{
-    font-size: 2rem;
-    margin: 0;
-  }
-  #bottom-section{
-    display: flex;
-    flex-direction: row;
-    margin: 0 0 15rem 10rem;
-    width: 100%;
-  } 
 }
-@media only screen and (min-width:1601px) and (max-width: 1700px){
-    .top-section-contents,.bottom-section-contents{
-      width: 15rem;
-      font-size: 1.5;
-      margin: 0 12rem;
-    }
-  }   
