--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -3,75 +3,74 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: space-evenly;
   height: 100%;
   width: 100%;
   position: relative;
   background-color:  #111;
 }
 
-
-#top-section,#bottom-section{
-  color: #aaa;
-  font-size: 1.5rem;
-}
-
 #top-section{
-  margin-top: 3rem;
+  color: transparent;
+  -webkit-text-stroke: 1px snow;
+  font-size: 4.5rem;
+  flex:1;
+  flex-shrink: 0;
   display: flex;
-  flex-direction: row;
+  margin-top: 10rem;
+  letter-spacing: 0.5rem;
 }
-.top-section-contents{
-  width: 15rem;
-  font-weight: bolder;
+#right-section{
+  flex:1;
+  flex-shrink: 0;
 }
-
-
 #middle-section{
+  flex:0;
+  flex-shrink: 0;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem 0;
+  color: #aaa;
+  font-size: 2rem;
 }
 
-.middle-section-content-words{
-  color: #ca9558;
-  font-size: 6rem;
-  font-weight: bolder;
-  line-height: 5rem;
-  border-bottom: 1px solid #ff5277;
+.middle-section-home{
+  margin: 0 1rem;
+  letter-spacing: 0.5rem;
 }
-
-
 #bottom-section{
-  display: flex;
-  flex-direction: row;
-}
-.bottom-section-contents{
-  margin: 0 0.5rem;
-  font-weight: bolder;
+  flex:1;
+  flex-shrink: 0;
 }
 
+.bottom-section-home{
+  color: #ca9558;
+  font-size: 10rem;
+  font-weight: bolder;
+  letter-spacing: 1rem;
+}
 
 @media only screen and (max-width: 389px){
-  .top-section-contents{
+  #top-section{
     font-size: 1rem;
-    width: 5rem;
   }
-  .middle-section-content-words{
+  #middle-section{
+    font-size: 0.5rem;
+  }
+  .bottom-section-home{
     font-size: 2rem;
-    line-height: normal;
+    letter-spacing: 0.2rem;
   }
 }
 
 @media only screen and (min-width:390px) and (max-width: 800px){
-  .top-section-contents{
+  #top-section{
     font-size: 1rem;
-    width: 5rem;
   }
-  .middle-section-content-words{
+  #middle-section{
+    font-size: 0.5rem;
+  }
+  .bottom-section-home{
     font-size: 2rem;
-    line-height: normal;
+    letter-spacing: 0.2rem;
   }
 }
 
@@ -79,7 +78,14 @@
 
 
 @media only screen and (min-width:801px) and (max-width: 899px){
-  .middle-section-content-words{
-    font-size: 5rem;
+  #top-section{
+    font-size:2rem;
   }
-}
+  #middle-section{
+    font-size: 1rem;
+  }
+  .bottom-section-home{
+    font-size: 4rem;
+    letter-spacing: 0.4rem;
+  }
+} 
