--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,22 +1,17 @@
 #navbar-container {
   display: flex;
-  font-size: 1rem;
-  border-bottom: 0.5px solid #ff5277;
+  font-size: 1.5rem;
   height: 2.5rem;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   padding-top: 1rem;
   position: fixed;
   top: 0;
-  left: 0;
   z-index: 100;
   width: 100%;
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(5px);
 }
 
-.left-side-navbar-items {
-  padding: 0.8rem;
-  color: #ff5277;
-}
 
 .right-side-navbar-items {
   padding: 1.5rem;
@@ -36,6 +31,9 @@
 }
 
 @media only screen and (max-width: 576px) {
+  #navbar-container{
+    justify-content: right;
+  }
   .right-side-navbar {
     display: none;
     
