--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -7,7 +7,7 @@
 }
 
 #left-section-about{
-    background-color: #111;
+    background-color: white;
     flex: 1.5;
     height: 100%;
     display: flex;
@@ -20,13 +20,13 @@
     margin-right: 10rem;
     padding-bottom: 4rem;
     font-size: 3rem;
-    color:white
+    color:#ff5277;
 }
 
 .left-section-contents{
     margin-bottom: 1rem;
     display: flex;
-    color: #B5B5B5;
+    color: black;
     font-size: 1.5rem;
     margin: 0 5rem;
     line-height: 2.5rem;
@@ -35,12 +35,12 @@
 }
 
 .left-section-contents:hover{
-    color: white;
+    color: #ff5277;
     border-bottom: 3px solid #ff5277;
 }
 
 #middle-section-about{
-    background-color:#111;
+    background-color:#aaa;
     flex: 2;
     height: 100%;
     display: flex;
@@ -49,7 +49,7 @@
 }
 
 #right-section-about{
-    background-color:#111;
+    background-color:black;
     height: 100%;
     flex: 1.5;
     display: flex;
