--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-color: black;
+  background-color: white;
 }
 
 #desk-section{
