--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,493 +1,29 @@
-#projects-container{
+#projects-wrapper{
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  background-color: blanchedalmond;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#left-section-container, #right-section-container{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.left-section, .right-section{
+  height: 20rem;
+  width: 40rem;
+  margin: 0 10rem;
+}
+
+#left-section-container{
   background-color: black;
-    height: 100vh;
-    position: relative;
 }
-.projects-wrapper{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+#right-section-container{
+  background-color: white;
 }
-.title-section{
-    margin-top: 4rem;
-    font-size: 3.5rem;
-    color: white;
-}
-
-.projects-section-wrapper{
-    margin-top: 5rem;
-}
-
-.right-section-projects{
-    display: flex;
-    flex-direction: column;
-    margin-left: 1rem;
-    width: 40rem;
-}
-.left-section-projects{
-    margin-right: 30rem;
-    width: 40rem;
-}
-
-
-
-.project2-section{
-    height: 20rem;
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px #ff5277;
-}
-.project4-section{
-    margin-top: 3rem;
-    height: 20rem;
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px #ff5277;
-}
-
-.project1-section {
-    height: 20rem;
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px #ff5277;
-  }
-  
-
-.project3-section{
-    height: 20rem;
-    margin-top: 3rem; 
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px #ff5277;
-}
-
-.projects-title-left, .projects-title-right{
-    font-size: 0;
-}
-
-.projects-techstack-arti-images,
-.projects-techstack-openShop-images,
-.projects-techstack-pangea-images,
-.projects-techstack-youNo-images{
-  color: white;
-  width: 2.5rem;
-  height: 2.5rem;
-  object-fit: contain;
-}
-.projects-techstack-arti{
-    position: absolute;
-    color: white;
-    top: 33%;
-    right: 50%;
-    display: flex;
-}
-.projects-techstack-pangea{
-  position: absolute;
-    color: white;
-    top: 33%;
-    left: 50%;
-    display: flex;
-}
-
-.projects-techstack-openShop{
-  position: absolute;
-    color: white;
-    top: 68.5%;
-    right: 50%;
-    display: flex;
-}
-.projects-techstack-youNo{
-  position: absolute;
-    color: white;
-    top: 68.5%;
-    left: 50%;
-    display: flex;
-}
-
-
-.project1-section:hover{
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px white;
-}
-.project2-section:hover{
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px white;
-}
-.project3-section:hover{
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px white;
-}
-.project4-section:hover{
-    position: static;
-    z-index: 1;
-    box-shadow: 0 0 10px 5px white;
-}
-
-.project1-section:hover .projects-title-left {
-    color: white;
-    font-size: 1.5rem;
-  }
-  .project3-section:hover .projects-title-left {
-    color: white;
-    font-size: 1.5rem;
-  }
-  .project2-section:hover .projects-title-right {
-    color: white;
-    font-size: 1.5rem;
-  }
-  .project4-section:hover .projects-title-right {
-    color: white;
-    font-size: 1.5rem;
-  }
-
-.project1-section:hover .border-projects-arti .line-arti {
-    stroke: #ff5277;
-    stroke-width: 3;
-    
-  }
-  .project1-section:hover .border-middle-projects-arti .line-arti{
-    stroke: #ff5277;
-    stroke-width: 3;
-  }
-  .project3-section:hover .border-projects-openShop .line-openShop {
-      stroke: #ff5277;
-      stroke-width: 3;
-    }
-    .project3-section:hover .border-middle-projects-openShop .line-openShop{
-      stroke: #ff5277;
-
-      stroke-width: 3;
-    }
-
-    .project2-section:hover .border-projects-pangea .line-pangea {
-        stroke: #ff5277;
-        stroke-width: 3;
-      }
-      .project2-section:hover .border-middle-projects-pangea .line-pangea{
-        stroke: #ff5277;
-
-        stroke-width: 3;
-      }
-      .project4-section:hover .border-projects-youNo .line-youNo {
-        stroke: #ff5277;
-        stroke-width: 3;
-      }
-      .project4-section:hover .border-middle-projects-youNo .line-youNo{
-        stroke: #ff5277;
-        stroke-width: 3;
-      }
-
-  .border-middle-projects-arti,
-  .border-middle-projects-pangea {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 22.9%;
-    z-index: 1;
-  }
-
-  .border-middle-projects-openShop,
-  .border-middle-projects-youNo {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 57.9%;
-  }
-
-.border-projects-arti{
-    position: absolute;
-    top: 30%;
-    right: 50%;
-    width: 15.5rem;
-}
-.border-projects-youNo{
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    width: 15.5rem;
-}
-.border-projects-pangea{
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    width: 15.5rem;
-}
-.border-projects-openShop{
-    position: absolute;
-    top: 65%;
-    right: 50%;
-    width: 15.5rem;
-}
-
-
-  
-.projects-section-wrapper{
-    display: flex;
-}
-
-.projects-img{
-    width: 100%;
-    height: 100%;
-}
-
-.projects-title-left{
-    margin-left: 30%;
-}
-
-.projects-title-right{
-    margin-left: 35%;
-}
-
-.github-project-arti{
-  position: absolute;
-  width: 5rem;
-  height: 2rem;
-  object-fit: contain;
-  top: 22%;
-  right: 59.5%;
-  cursor: pointer;
-}
-.github-project-pangea{
-  position: absolute;
-  width: 5rem;
-  height: 2rem;
-  object-fit: contain;
-  top: 22%;
-  left: 59.5%;
-  cursor: pointer;
-}
-.github-project-openShop{
-  position: absolute;
-  width: 5rem;
-  height: 2rem;
-  object-fit: contain;
-  top: 60%;
-  right: 59.5%;
-  cursor: pointer;
-}
-.github-project-youNo{
-  position: absolute;
-  width: 5rem;
-  height: 2rem;
-  object-fit: contain;
-  top: 60%;
-  left: 59.5%;
-  cursor: pointer;
-}
-.github-project-arti:hover,
-.github-project-openShop:hover,
-.github-project-pangea:hover,
-.github-project-youNo:hover{
-opacity: 0.7;
-}
-
-
-
-@media only screen and (max-width: 388px){
-  
-  .title-section {
-    font-size: 2rem;
-  }
-
-  .projects-section-wrapper {
-    margin-top: 1rem;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .right-section-projects,
-  .left-section-projects {
-    margin: 1rem;
-  }
-
-  .project1-section,
-  .project2-section,
-  .project3-section,
-  .project4-section {
-    margin-bottom: 1rem;
-    width: 100%;
-    height: 50%;
-    box-shadow: none;
-
-  }
-
-  .projects-title-left,
-  .projects-title-right {
-    font-size: 1rem;
-    color: #ff5277;
-  }
-  .projects-img{
-    width: 20rem;
-    height: 4rem;
-    margin-left: 10rem;
-    object-fit: contain;
-  }
-  
-  .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
-  {
-    display: none;
-  }
-  .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
-    display: none;
-  }
-  .projects-img:hover{
-    display: none;
-  }
-  .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
-    display: none;
-  }
-  .border-middle-projects-arti,
-  .border-middle-projects-pangea,
-  .border-middle-projects-openShop,
-  .border-middle-projects-youNo, 
-  .border-projects-arti,
-  .border-projects-openShop,
-  .border-projects-pangea,
-  .border-projects-youNo{
-    display: none;
-  }
-}
-
-@media only screen and (min-width:389px) and (max-width: 769px){
-  .title-section {
-    font-size: 2rem;
-  }
-
-  .projects-section-wrapper {
-    margin-top: 1rem;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .right-section-projects,
-  .left-section-projects {
-    margin: 1rem;
-  }
-
-  .project1-section,
-  .project2-section,
-  .project3-section,
-  .project4-section {
-    margin-bottom: 1rem;
-    width: 100%;
-    height: 50%;
-    box-shadow: none;
-  }
-
-  .projects-title-left,
-  .projects-title-right {
-    font-size: 1rem;
-    color: #ff5277;
-  }
-  .projects-img{
-    width: 20rem;
-    height: 7rem;
-    margin-left: 10rem;
-    object-fit: contain;
-  }
-  
-  .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
-  {
-    display: none;
-    pointer-events: none;
-  }
-  .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
-    display: none;
-    pointer-events: none;
-  }
-  .projects-img:hover{
-    display: none;
-    pointer-events: none;
-  }
-  .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
-    display: none;
-    pointer-events: none;
-  }
-  .border-middle-projects-arti,
-  .border-middle-projects-pangea,
-  .border-middle-projects-openShop,
-  .border-middle-projects-youNo, 
-  .border-projects-arti,
-  .border-projects-openShop,
-  .border-projects-pangea,
-  .border-projects-youNo{
-    display: none;
-    pointer-events: none;
-  }
-}
-
-@media only screen and (min-width:769px) and (max-width: 1600px){
-      
-  .title-section {
-    font-size: 2rem;
-  }
-
-  .projects-section-wrapper {
-    margin-top: 1rem;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .right-section-projects,
-  .left-section-projects {
-    margin: 1rem;
-  }
-
-  .project1-section,
-  .project2-section,
-  .project3-section,
-  .project4-section {
-    margin-bottom: 1rem;
-    width: 100%;
-    height: 50%;
-    box-shadow: none;
-  }
-
-  .projects-title-left,
-  .projects-title-right {
-    font-size: 1rem;
-    color: #ff5277;
-  }
-  .projects-img{
-    width: 20rem;
-    height: 10rem;
-    margin-left: 10rem;
-    object-fit: contain;
-  }
-  
-  .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
-  {
-    pointer-events: none;
-    display: none;
-
-  }
-  .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
-    pointer-events: none;
-    display: none;
-  }
-  .projects-img:hover{
-    pointer-events: none;
-    display: none;
-  }
-  .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
-    pointer-events: none;
-    display: none;
-  }
-  .border-middle-projects-arti,
-  .border-middle-projects-pangea,
-  .border-middle-projects-openShop,
-  .border-middle-projects-youNo, 
-  .border-projects-arti,
-  .border-projects-openShop,
-  .border-projects-pangea,
-  .border-projects-youNo{
-    pointer-events: none;
-    display: none;
-  }
-}   
