navbar-color-change-mobile

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -42,7 +42,7 @@
   .hamburger-menu {
     display: block;
     font-size: 2rem;
-    color: white;
+    color: #ff5277;
     padding-right: 2rem;
   }
   .left-side-navbar-items:hover {
@@ -88,7 +88,7 @@
   .hamburger-menu {
     display: block;
     font-size: 2rem;
-    color: white;
+    color: #ff5277;
     padding-right: 2rem;
   }
   .left-side-navbar-items:hover {
