--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -33,6 +33,7 @@
 @media only screen and (max-width: 576px) {
   #navbar-container{
     justify-content: right;
+    backdrop-filter: 10px;
   }
   .right-side-navbar {
     display: none;
