--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -221,29 +221,32 @@
         flex-direction: column;
         height: 70%;
        } 
+       
        .left-section-contents{
         font-size: 0.5rem;
-        margin: 0.5rem 2rem;
+        margin: 0.5rem;
         line-height: normal;
        }
        .name-tag{
         font-size: 1rem;
-        margin: 6rem 0 0 0;
-        padding: 0;
+        margin: 0;
+       }
+       #middle-section-about{
+        height: 15rem;
        }
        #profileLogo{
-        height: 50%;
-        object-fit: contain;
+        height: 10rem;
        }
        #right-section-about{
         height: 2rem;
+        background-color: #111;
        }
        .right-section-contents{
         font-size: 1rem;
        }
        .frontend-images, .backend-images,.misc-images{
-        height: 3rem;
-        width: 3rem;
+        height: 2rem;
+        width: 2rem;
         object-fit: contain;
        }
        .misc-images:last-child{
