--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -173,7 +173,7 @@
 
 
 
-@media only screen and (max-width: 389px){
+@media only screen and (max-width: 388px){
     #about-container{
         display: flex;
         flex-direction: column;
@@ -215,7 +215,7 @@
         }
 }
 
-@media only screen and (min-width:390px) and (max-width: 800px){
+@media only screen and (min-width:389px) and (max-width: 800px){
     #about-container{
         display: flex;
         flex-direction: column;
@@ -236,6 +236,8 @@
        }
        #profileLogo{
         height: 10rem;
+        width: 10rem;
+        object-fit: contain;
        }
        #right-section-about{
         height: 2rem;
